--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Nothing So Far....</title>
+    <title>What's The Time?</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="siteStyle.css" />
   </head>
   <body>
     <script type="text/javascript" src="ranColor.js"></script>
-    <canvas id="timePiece" width="800" height="600" style="border:1px solid #000000;"></canvas>
+    <canvas id="timePiece" width="800" height="600"></canvas>
     <script type="text/javascript" src="time.js"></script>
   </body>
 </html>
