--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script type="text/javascript" src="ranColor.js"></script>
     <canvas id="timePiece" width="800" height="600"></canvas>
     <script type="text/javascript" src="time.js"></script>
+    <button id="styleChangeB" onclick="changeStyle();">Change Style!</button>
   </body>
 </html>
