--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script type="text/javascript" src="ranColor.js"></script>
     <canvas id="timePiece" width="800" height="600"></canvas>
     <script type="text/javascript" src="time.js"></script>
-    <button id="styleChangeB" onclick="changeStyle();">Change Style!</button>
+    <label class="switch">
+      <input type="checkbox" onchange="changeStyle();">
+      <span class="slider"></span>
+    </label>
+
   </body>
 </html>
